--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <html lang="es">
-<head prefix="og: http://ogp.me/ns# profile: http://ogp.me/ns/profile#">
-	<meta http-equiv=Content-Type content="text/html; charset=UTF-8">
-	<meta name=viewport content="width=device-width,initial-scale=1">
-	<meta http-equiv=X-UA-Compatible content="IE=edge">
-	<title>Conciliaciones de Consumo</title>
-	<style>		html,body 
-		{	
-    	font-family: "Ideal Sans SSm A", "Ideal Sans SSm B", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-		}	
-    
-#customAlert {
-    background-color: #fff;
-}
+<head>
+<meta http-equiv=Content-Type content="text/html; charset=UTF-8">
+<meta name=viewport content="width=device-width,initial-scale=1">
+<meta http-equiv=X-UA-Compatible content="IE=edge">
+<title>Conciliaciones de Consumo</title>
+<style>		
+html,body {font-family: "Ideal Sans SSm A", "Ideal Sans SSm B", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"}	
+#customAlert {background-color: #fff}
 
 #customAlert button {
     background-color: #bababa;
