--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ html,body {font-family: "Ideal Sans SSm A", "Ideal Sans SSm B", -apple-system, B
 }
 
 #customConfirm {
-    background-color: #fff;
+    background-color: #ddd;
 }
 
 #customConfirm button.confirm {
@@ -122,7 +122,7 @@ confirm('¿Verific&oacute; si es el d&iacute;a y hora correcto?', function (data
   if (data)
      window.location.assign("https://meet.google.com/uqn-ztso-mje?authuser=0")
   else
-            alert('Vuelva a hacer click el dia y hora correcto')
+            alert('Vuelva a ingresar el d&iacute;ia y hora correcto')
 }, {return: true});	
 </script>
 </body>
