--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@ confirm('¿Verific&oacute; si es el d&iacute;a y hora correcto?', function (data
   if (data)
      window.location.assign("https://meet.google.com/uqn-ztso-mje?authuser=0")
   else
-            alert('Vuelva a ingresar el d&iacute;ia y hora correcto')
+     alert('Vuelva a ingresar el d&iacute;ia y hora correcto');
+     window.location.assign("https://meet.google.com/instrucciones")
 }, {return: true});	
 </script>
 </body>
