--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ confirm('¿Verific&oacute; si es el d&iacute;a y hora correcto?', function (data
      window.location.assign("https://meet.google.com/uqn-ztso-mje?authuser=0")
   else
      alert('Vuelva a ingresar el d&iacute;ia y hora correcto');
-     window.location.assign("https://meet.google.com/instrucciones")
+     window.location.assign("https://coprec.github.io/instrucciones")
 }, {return: true});	
 </script>
 </body>
