--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ confirm('¿Verific&oacute; si es el d&iacute;a y hora correcto?', function (data
 {
   if (data)
  {
-  window.location("https://meet.google.com/uqn-ztso-mje?authuser=0")
+  window.location.assign("https://meet.google.com/uqn-ztso-mje?authuser=0")
 }
 else
  { 
